[workspace]
members = [
    # ch02
    "just-do-rust/ch02/ch021",
    "just-do-rust/ch02/ch022",
    # ch03
    "just-do-rust/ch03/ch031/main-param",
    "just-do-rust/ch03/ch031/print-println",
    "just-do-rust/ch03/ch032/const-declaration",
    "just-do-rust/ch03/ch032/mut-var",
    "just-do-rust/ch03/ch032/variable-declaration",
    "just-do-rust/ch03/ch033/compound",
    "just-do-rust/ch03/ch033/data-type",
    "just-do-rust/ch03/ch033/scalar",
    "just-do-rust/ch03/ch034",
    "just-do-rust/ch03/ch035/closure",
    "just-do-rust/ch03/ch035/funtion",
    "just-do-rust/ch03/ch035/macro-explain",
    "just-do-rust/ch03/ch035/method",
    "just-do-rust/ch03/ch036/for-statement",
    "just-do-rust/ch03/ch036/if-statement",
    "just-do-rust/ch03/ch036/loop-statement",
    "just-do-rust/ch03/ch036/match-if-let",
    "just-do-rust/ch03/ch036/while-statement",
    "just-do-rust/ch03/ch037/hashmap",
    "just-do-rust/ch03/ch037/hashset",
    "just-do-rust/ch03/ch037/vector",
    "just-do-rust/ch03/ch038/additional-infomation-string",
    "just-do-rust/ch03/ch038/ampersand-str",
    "just-do-rust/ch03/ch038/ampersand-str-and-string",
    "just-do-rust/ch03/ch038/rust-string-example",
    "just-do-rust/ch03/ch038/string", "just-do-rust/ch03/ch039/easy-example",
    "just-do-rust/ch03/ch039/filter", "just-do-rust/ch03/ch039/filter-map", "just-do-rust/ch03/ch039/for-each", "just-do-rust/ch03/ch039/hard-example",
    "just-do-rust/ch03/ch039/iter-into-iter-iter-mut",
    "just-do-rust/ch03/ch039/map", "just-do-rust/ch03/ch039/middle-example", "just-do-rust/ch03/ch039/take-while", "just-do-rust/ch04/ch040", "just-do-rust/ch04/ch041/memory", "just-do-rust/ch04/ch041/ownership", "just-do-rust/ch04/ch041/borrow", "just-do-rust/ch04/ch041/ownership-example", "just-do-rust/ch04/ch041/copy-clone-a-move", "just-do-rust/ch04/ch041/copy-clone-b-case-of-copy", "just-do-rust/ch04/ch041/copy-clone-c-copy-trait", "just-do-rust/ch04/ch041/copy-clone-d-code-trait-manual-implement", "just-do-rust/ch04/ch041/copy-clone-e-copy-clone-comparison", "just-do-rust/ch04/ch041/copy-clone-f-copy-of-structure",
]
