[workspace]
members = [
    # ch02
    "just-do-rust/ch02/ch021",
    "just-do-rust/ch02/ch022",
    # ch03
    "just-do-rust/ch03/ch031/main-param",
    "just-do-rust/ch03/ch031/print-println",
    "just-do-rust/ch03/ch032/const-declaration",
    "just-do-rust/ch03/ch032/mut-var",
    "just-do-rust/ch03/ch032/variable-declaration",
    "just-do-rust/ch03/ch033/compound",
    "just-do-rust/ch03/ch033/data-type",
    "just-do-rust/ch03/ch033/scalar",
    "just-do-rust/ch03/ch034",
    "just-do-rust/ch03/ch035/closure",
    "just-do-rust/ch03/ch035/funtion",
    "just-do-rust/ch03/ch035/macro-explain",
    "just-do-rust/ch03/ch035/method",
    "just-do-rust/ch03/ch036/for-statement",
    "just-do-rust/ch03/ch036/if-statement",
    "just-do-rust/ch03/ch036/loop-statement",
    "just-do-rust/ch03/ch036/match-if-let",
    "just-do-rust/ch03/ch036/while-statement",
    "just-do-rust/ch03/ch037/hashmap",
    "just-do-rust/ch03/ch037/hashset",
    "just-do-rust/ch03/ch037/vector",
    "just-do-rust/ch03/ch038/additional-infomation-string",
    "just-do-rust/ch03/ch038/ampersand-str",
    "just-do-rust/ch03/ch038/ampersand-str-and-string",
    "just-do-rust/ch03/ch038/rust-string-example",
    "just-do-rust/ch03/ch038/string",
    "just-do-rust/ch03/ch039/easy-example",
    "just-do-rust/ch03/ch039/filter",
    "just-do-rust/ch03/ch039/filter-map",
    "just-do-rust/ch03/ch039/for-each",
    "just-do-rust/ch03/ch039/hard-example",
    "just-do-rust/ch03/ch039/iter-into-iter-iter-mut",
    "just-do-rust/ch03/ch039/map",
    "just-do-rust/ch03/ch039/middle-example",
    "just-do-rust/ch03/ch039/take-while",
    # ch04
    "just-do-rust/ch04/ch040",
    "just-do-rust/ch04/ch041/memory",
    "just-do-rust/ch04/ch041/ownership",
    "just-do-rust/ch04/ch041/borrow",
    "just-do-rust/ch04/ch041/ownership-example",
    "just-do-rust/ch04/ch041/copy-clone-a-move",
    "just-do-rust/ch04/ch041/copy-clone-b-case-of-copy",
    "just-do-rust/ch04/ch041/copy-clone-c-copy-trait",
    "just-do-rust/ch04/ch041/copy-clone-d-code-trait-manual-implement",
    "just-do-rust/ch04/ch041/copy-clone-e-copy-clone-comparison",
    "just-do-rust/ch04/ch041/copy-clone-f-copy-of-structure",
    "just-do-rust/ch04/ch042/struct-description",
    "just-do-rust/ch04/ch042/tuple-struct",
    "just-do-rust/ch04/ch042/method-of-struct",
    "just-do-rust/ch04/ch043/enum-type",
    "just-do-rust/ch04/ch043/option",
    "just-do-rust/ch04/ch043/option-example",
    "just-do-rust/ch04/ch043/result",
    "just-do-rust/ch04/ch043/result-example",
    "just-do-rust/ch04/ch044/trait-item-concept",
    "just-do-rust/ch04/ch044/trait-usage-implement",
    "just-do-rust/ch04/ch044/trait-usage-define",
    "just-do-rust/ch04/ch044/trait-auto-implement-derive",
    "just-do-rust/ch04/ch044/trait-bound",
    "just-do-rust/ch04/ch044/trait-associated-type",
    "just-do-rust/ch04/ch044/polymorphism",
    "just-do-rust/ch04/ch044/impl-trait",
    "just-do-rust/ch04/ch044/box-dyn-trait",
    "just-do-rust/ch04/ch045/generic-concept",
    "just-do-rust/ch04/ch045/generic-function",
    "just-do-rust/ch04/ch045/generic_structure",
    "just-do-rust/ch04/ch045/generic_enum",
    "just-do-rust/ch04/ch045/lifetime",
    "just-do-rust/ch04/ch045/lifetime-notation",
    "just-do-rust/ch04/ch045/structure-lifetime",
    "just-do-rust/ch04/ch046/smart-pointer",
    "just-do-rust/ch04/ch046/smart-pointer-box",
    "just-do-rust/ch04/ch046/box-a",
    "just-do-rust/ch04/ch046/box-b",
    "just-do-rust/ch04/ch046/box-c",
    "just-do-rust/ch04/ch047/error-handling-result-option",
    "just-do-rust/ch04/ch047/error-delegation",
    "just-do-rust/ch04/ch047/integer-overflow",
    "just-do-rust/ch04/ch048/project",
    "just-do-rust/ch04/ch048/package",
    "just-do-rust/ch04/ch048/module-crate",
    "just-do-rust/ch04/ch048/module",
    "just-do-rust/ch04/ch049/question-mark-sized-meaning",
    "just-do-rust/ch04/ch049/deref-deep-dive",
]
